# XpressiveTools

./: CMakeLists.txt  LICENSE  ModularSynth.cpp  ModularSynth.h  README.md  mainwindow.cpp  mainwindow.h  oscilloscopetab.cpp  oscilloscopetab.h  pcmeditortab.cpp  pcmeditortab.h  synthengine.cpp  synthengine.h
.github/workflows/: build.yml
